# desafio-python-django

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
common/: models.py
desafio_python_django/: asgi.py  settings.py  urls.py  wsgi.py
desafio_python_django/settings/: base.py  prod.py
profiles/: models.py  serializers.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20201107_2149.py
profiles/tests/: test_phone_model.py  test_phone_serializer.py  test_profile_model.py  test_profile_serializer.py  test_signup_view.py
users/: models.py  serializers.py
users/migrations/: 0001_initial.py
users/tests/: test_user_model.py  test_user_serializer.py
